prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/loop_controller_not_in_loop_break.diag.txt
ERROR: 'break' has to be in a loop block
testData/diagnostics/compilation_errors/sema_errors/loop_controller_not_in_loop_break.nut:3:4

function foo() {
    break
    ^----
}


